--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^10.0.0",
+    "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.6"
   },
@@ -40,6 +41,7 @@
     "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
+    "sequelize-cli": "^6.4.1",
     "supertest": "^6.2.4"
   }
 }
