--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,9 @@
                 "selector": "CallExpression[callee.object.name='console'][callee.property.name!=/^(log|warn|error|info|trace)$/]",
                 "message": "Unexpected property on console object was called"
             }
-        ]
+        ],
+        "camelcase": "off",
+        "no-unused-vars": "warn",
+        "eol-last": "warn"
     }
 }
