--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
         ],
         "camelcase": "off",
         "no-unused-vars": "warn",
-        "eol-last": "warn"
+        "eol-last": "warn",
+        "object-curly-newline": "warn"
     }
 }
