--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,8 @@
         "no-unused-vars": "warn",
         "eol-last": "warn",
         "object-curly-newline": "warn",
-        "max-len": "warn"
+        "max-len": "warn",
+        "comma-dangle": "warn",
+        "keyword-spacing": "warn"
     }
 }
