[finishes #183361356] Comment, edit, get and delete commtn(s)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
         "object-curly-newline": "warn",
         "max-len": "warn",
         "comma-dangle": "warn",
-        "keyword-spacing": "warn"
+        "keyword-spacing": "warn",
+        "object-curly-spacing": "warn"
     }
 }
