[finishes #183263103] Comment, edit, get and delete commtn(s)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
         "max-len": "warn",
         "comma-dangle": "warn",
         "keyword-spacing": "warn",
-        "object-curly-spacing": "warn"
+        "object-curly-spacing": "warn",
+        "indent": "warn"
     }
 }
