Revert "Review changes implemented"
This reverts commit ce2a43a2bdd5063712b4ba1ce90c299ae7347c15.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,6 @@
         "object-curly-newline": "warn",
         "max-len": "warn",
         "comma-dangle": "warn",
-        "keyword-spacing": "warn",
-        "space-before-blocks": "warn"
+        "keyword-spacing": "warn"
     }
 }
