--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "server.js",
+    "start": "node server.js",
     "test": "NODE_ENV=test nyc mocha",
     "test:coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
