--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -41,5 +41,5 @@ jobs:
     - run: npm test
     - name: Coveralls GitHub Action
       uses: coverallsapp/github-action@1.1.3
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          'github-token: ${{ secrets.github_token }}'
