--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,4 +42,4 @@ jobs:
     - name: Coveralls GitHub Action
       uses: coverallsapp/github-action@1.1.3
         with:
-          'github-token: ${{ secrets.github_token }}'
+          github-token: ${{ secrets.github_token }}
